# RaG-ResTCN

./: .gitignore  MANIFEST.md  README.md  README_CN.md  README_zh.md  pyproject.toml  requirements.txt
configs/data/: indpensim_local.json  preprocess_phase04.json  split_phase04.json  variable_roles.json
configs/model/: phase05_process_baselines.json  phase06_deep_forecasters.json  phase07_mechanism_diagnostics.json  phase08_raman_multimodal.json  phase09_multimodal_fermnftp.json  phase10_residual_multimodal.json  phase12_enhancement.json  phase14_enhance_v2.json  phase15_strict_gap_completion.json  phase16_anomaly_only.json  phase16_strong_baselines.json  phase16_strong_baselines_v4_2.json  phase17_rwth_external_raman.json  phase31_infosci_modern_deep_baselines.json  unified_v2_modern_deep_baselines.json  unified_v2_rag_restcn.json
data/: README.md
docs/: data_availability.md  reproducibility.md  result_files.md
hpc/: README.md  run_phase31_l40.sbatch  submit_phase31_l40.sh  submit_phase31_l40_array6.sh
scripts/: 03_data_audit.py  04_preprocess_indpensim.py  05_build_splits.py  07_fit_train_normal_stats.py  13_run_phase08_raman_multimodal.py  17_train_phase10_residual_multimodal.py  24_run_phase14_enhance_v2.py  25_run_phase15_strict_gap_completion.py  26_run_phase16_strong_baselines.py  27_run_phase17_rwth_external_raman.py  30_run_phase16_anomaly_only.py  31_run_infosci_modern_deep_baselines.py  32_collect_phase31_shards.py  33_prepare_unified_v2_protocol.py  34_run_unified_v2_rag_restcn.py  35_collect_unified_v2_results.py
src/fermnftp/: __init__.py  (+4 more)
(+22 files in other folders)
